Replaced constructor call with valueOf() call to remove static analyzer warning about inefficient use of constructor
Issue-ID: SO-1841
Signed-off-by: Oleksandr Moliavko <o.moliavko@samsung.com>
Change-Id: I325df68ce47f4d5106c51a576d4e7b2de2d5d73c